Een nieuwe class voor validatie beter misschien