@@ -37,11 +37,12 @@ public class ReadFiles {
             List<String> lines = Files.readAllLines(file.toPath());
             if (lines.isEmpty()) return List.of();
 
-            String[] headers = lines.get(0).split("\t", -1);
-            int idxGene = indexOf(headers, "gene_claim_name");
-            int idxType = indexOf(headers, "interaction_type");
-            int idxScore = indexOf(headers, "interaction_score");
-            int idxDrug = indexOf(headers, "drug_concept_id");
+            String[] headers = lines.getFirst().split("\t", -1);
+            int idxGene = indexOf(headers, "gene_claim_name", file);
+            int idxType = indexOf(headers, "interaction_type", file);
+            int idxScore = indexOf(headers, "interaction_score", file);
+            int idxDrug = indexOf(headers, "drug_concept_id", file);
+
 
             List<Interaction> result = new ArrayList<>();
             for (int i = 1; i < lines.size(); i++) {
@@ -66,9 +67,10 @@ public class ReadFiles {
             List<String> lines = Files.readAllLines(file.toPath());
             if (lines.isEmpty()) return List.of();
 
-            String[] headers = lines.get(0).split("\t", -1);
-            int idxName = indexOf(headers, "drug_claim_name");
-            int idxId = indexOf(headers, "concept_id");
+            String[] headers = lines.getFirst().split("\t", -1);
+            int idxName = indexOf(headers, "drug_claim_name", file);
+            int idxId = indexOf(headers, "concept_id", file);
+
 
             List<Drug> result = new ArrayList<>();
             for (int i = 1; i < lines.size(); i++) {
@@ -88,10 +90,10 @@ public class ReadFiles {
             List<String> lines = Files.readAllLines(file.toPath());
             if (lines.isEmpty()) return List.of();
 
-            String[] headers = lines.get(0).split("\t", -1);
-            int idxType1 = indexOf(headers, "drugtype_1");
-            int idxType2 = indexOf(headers, "drugtype_2");
-            int idxResult = indexOf(headers, "resultaat");
+            String[] headers = lines.getFirst().split("\t", -1);
+            int idxType1 = indexOf(headers, "drugtype_1",file);
+            int idxType2 = indexOf(headers, "drugtype_2", file);
+            int idxResult = indexOf(headers, "resultaat", file);
 
             List<Combination> result = new ArrayList<>();
             for (int i = 1; i < lines.size(); i++) {
@@ -105,11 +107,10 @@ public class ReadFiles {
             throw new RuntimeException("Error reading file: " + file, e);
         }
     }
-        private int indexOf(String[] headers, String name) {
-            for (int i = 0; i < headers.length; i++) {
-                if (headers[i].equals(name)) return i;
-            }
-            throw new IllegalArgumentException("Header not found: " + name);
+    private int indexOf(String[] headers, String name, File file) {
+        for (int i = 0; i < headers.length; i++) {
+            if (headers[i].equals(name)) return i;
         }
-
+        throw new IllegalArgumentException("Header not found: '" + name + "' in file: " + file.getName());
+    }
 }
